--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
+    "mongodb": "^7.1.0",
     "next": "^16.1.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
